# Vuldeff

./: README.md  requirements.txt
detect/: AhoCorasick.py  call_antlr.py  countLines.py  cuckooFliter.py  detect1.py  main.py  slicepic.py  ssdeep.py  vul_generator.py
spider/gitcve/gitcve/: 1999url.txt  2002url.txt  2006url.txt  2007url.txt  2008url.txt  2009url.txt  2010url.txt  2011url.txt  2012url.txt  2013url.txt  2014url.txt  2015url.txt  2016url.txt  2017url.txt  2018url.txt  2019url.txt  2020url.txt  extractUrl.py  gitlaburl.txt  scrapy.cfg
spider/gitcve/gitcve/data/1999/CVE-1999-0199/: .diff
spider/gitcve/gitcve/data/1999/CVE-1999-0731/: .diff
spider/gitcve/gitcve/data/2006/CVE-2006-3635/: .diff
spider/gitcve/gitcve/data/2008/CVE-2008-5189/: .diff
spider/gitcve/gitcve/data/2008/CVE-2008-5619/: .diff
spider/gitcve/gitcve/data/2008/CVE-2008-7050/: .diff  auth_phpbb3.php
spider/gitcve/gitcve/data/2009/CVE-2009-1194/: .diff
spider/gitcve/gitcve/data/2009/CVE-2009-3111/: .diff
spider/gitcve/gitcve/data/2009/CVE-2009-3287/: .diff
spider/gitcve/gitcve/data/2009/CVE-2009-3627/: .diff
spider/gitcve/gitcve/data/2009/CVE-2009-4214/: .diff
spider/gitcve/gitcve/data/2009/CVE-2009-5145/: .diff
spider/gitcve/gitcve/data/2009/CVE-2009-5147/: .diff
spider/gitcve/gitcve/data/2010/CVE-2010-0011/: .diff
spider/gitcve/gitcve/data/2021/CVE-2021-21269/: .diff  Cargo.toml  main.rs
spider/gitcve/gitcve/gitcve/: items.py  middlewares.py  pipelines.py  settings.py  url.txt
spider/gitcve/gitcve/gitcve/spiders/: patch.py  rawfile.py
(+4193 files in other folders)
